# AdventOfCode

./: CMakeLists.txt  README.md
2018/: CMakeLists.txt
2018/Day1/Part1/: main.cpp
2018/Day1/Part2/: main.cpp
2018/Day2/Part1/: main.cpp
2018/Day2/Part2/: main.cpp
2018/Day3/Part1/: cloth.cpp  main.cpp
2018/Day3/Part2/: cloth.hpp
2018/lib/: CMakeLists.txt
2018/lib/include/: someheader.hpp
2018/lib/src/: somesource.cpp
